<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_FFFFFF"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow_FBE558">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/black_282323"
                android:textSize="@dimen/DIMEN_17DP" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/DIMEN_17DP" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/DIMEN_8DP"
                android:background="@null"
                android:hint="@string/please_input_phone"
                android:inputType="number"
                android:maxLength="13" />
        </LinearLayout>

        <View style="@style/line_gray_BBBBBB" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_code"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/DIMEN_17DP" />


            <EditText
                android:id="@+id/et_verify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/DIMEN_8DP"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_verify"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="@dimen/DIMEN_14DP" />

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="@dimen/DIMEN_110DP"
                android:layout_height="@dimen/DIMEN_35DP"
                android:background="@drawable/bg_btn_count_verify"
                android:text="@string/get_verify_code"
                android:textColor="@color/gray_A0A0A0"
                android:textSize="@dimen/DIMEN_15DP" />

        </LinearLayout>

        <View
            style="@style/line_gray_BBBBBB"
            android:layout_marginTop="@dimen/DIMEN_8DP" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:background="@drawable/bg_btn_no_login"
            android:text="@string/next"
            android:textColor="@color/gray_A0A0A0" />


    </LinearLayout>


</layout>
