<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_FFFFFF"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow_FBE558">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/modify_nickname"
                android:textColor="@color/black_282323"
                android:textSize="@dimen/DIMEN_17DP" />


        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick_name_m"
                android:textColor="@color/black_333333"
                android:textSize="@dimen/DIMEN_17DP" />


            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/DIMEN_8DP"
                android:background="@null"
                android:hint="@string/please_set_nickname"
                android:maxLength="8" />
        </LinearLayout>

        <View style="@style/line_gray_BBBBBB" />

        <Button
            android:id="@+id/btn_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:background="@drawable/bg_btn_no_login"
            android:text="@string/affirm_modify"
            android:textColor="@color/gray_A0A0A0" />

    </LinearLayout>


</layout>
