<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_FFFFFF"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow_FBE558">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phone_login"
                android:textColor="@color/black_282323"
                android:textSize="@dimen/DIMEN_17DP" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/DIMEN_17DP"
                android:text="@string/register"
                android:textColor="@drawable/bg_tv_login" />
        </android.support.v7.widget.Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_phone_icon" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/DIMEN_8DP"
                android:background="@null"
                android:hint="@string/please_input_phone"
                android:inputType="number"
                android:maxLength="13" />
        </LinearLayout>

        <View style="@style/line_gray_BBBBBB" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_password_icon" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/DIMEN_8DP"
                android:background="@null"
                android:hint="@string/please_input_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/line_gray_BBBBBB" />

        <Button
            android:id="@+id/btn_affirm_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:background="@drawable/bg_btn_no_login"
            android:text="@string/login"
            android:textColor="@color/gray_A0A0A0" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/DIMEN_26DP"
            android:text="@string/forget_password_question"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/DIMEN_15DP" />

    </LinearLayout>

</layout>
