<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_FFFFFF"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow_FBE558">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/phone_register"
                android:textColor="@color/black_282323"
                android:textSize="@dimen/DIMEN_17DP" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/DIMEN_17DP"
                android:text="@string/login"
                android:textColor="@drawable/bg_tv_login" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_password_icon" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/DIMEN_8DP"
                android:background="@null"
                android:hint="@string/please_set_user_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <View style="@style/line_gray_BBBBBB" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/DIMEN_48DP"
            android:layout_marginRight="@dimen/DIMEN_48DP"
            android:layout_marginTop="@dimen/DIMEN_36DP"
            android:background="@drawable/bg_btn_no_login"
            android:text="@string/affirm_register"
            android:textColor="@color/gray_A0A0A0" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

       <!-- <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/DIMEN_60DP"
            android:background="@color/gray_F9F9F9"
            android:gravity="center"
            android:text="@string/warm_prompt_register"
            android:textColor="@color/gray_999999"
            android:textSize="@dimen/DIMEN_14DP" />
-->
    </LinearLayout>


</layout>
